crates/review-buddy/tests/snapshots/show_projects__projects_search_100x30_dusk.snap
---
source: crates/review-buddy/tests/show_projects.rs
expression: text(&render(&mut a))
---
 review buddy  ·  demo · 4 sources · 19 changes                                                Dusk
  1 ● All 19   2 ●╭ Show ────────────────────────────────────────────────────────╮ 1
╭ queue ──────────│                                                              │─────────────────╮
│  Waiting on you │  [x] reviewing  changes waiting on your review               │                 │
│▌ ◐ Add a menu ba│  [x] assigned   changes assigned to you                      │              2h │
│▌ GH review-buddy│  [x] authored   changes you opened                           │    ¶6   2 open  │
│  ◐ Update eslint│  [ ] drafts     drafts, yours and others                     │              2h │
│  GH eslint-confi│  [ ] noise      bot updates, mixed into the buckets          │    ¶6   2 open  │
│  ◐ Update icons │                                                              │              2h │
│  GH icons#907 · │  Projects  16 of 16 projects shown                           │    ¶6   2 open  │
│  ◐ Update legacy│  / design▏                                        2 matches  │              2h │
│  GH legacy-forms│  liminal-hq                          2 projects · 2 changes  │    ¶6   2 open  │
│  ◐ Update legacy│▌ [x] ongov/ontario-design-system                          1  │              2h │
│  GH legacy-porta│  [x] ongov/ontario-design-system-legacy-docs              1  │    ¶6   2 open  │
│  ◐ Update legacy│                                                              │              2h │
╰─────────────────│                                                              │─────────────────╯
╭ liminal-hq/revie│                                                              │────────────── ▼ ╮
│ Add a menu bar a│                                                              │                 │
│ ada wants ada/me│                                                              │                 │
│ +32 −1 · 3 files│                                                              │                 │
│ a Approve  x Req│                                                              │                 │
│  Overview   File│                                                              │                 │
│ ────────────────│                                                              │──────────────── │
│ Adds a menu bar │                                                              │                 │
│                 │                                                              │                 │
│ • Menu::select_n│  Nothing is hidden.                                          │                 │
│ • Menu::activate│  space toggle · / find · a all · n none · esc close          │                 │
│ • The bar itself│  Changes last for this session only.                         │                 │
╰─────────────────╰──────────────────────────────────────────────────────────────╯─────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
